After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781960 - Not possible anymore to start builder via Gnome shell
Not possible anymore to start builder via Gnome shell
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
Flatpak Nightly Channel
Other Linux
: Normal critical
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-30 04:46 UTC by Peter Sonntag
Modified: 2017-05-09 06:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flatpak: handle application addin not yet loaded (2.27 KB, patch)
2017-05-09 06:38 UTC, Christian Hergert
committed Details | Review

Description Peter Sonntag 2017-04-30 04:46:02 UTC
Since some days it is not possible anymore to start Builder (installed via nightly built flatpak) from the Gnome shell.
Starting it from the command line works fine.
Comment 1 Christian Hergert 2017-05-08 21:58:48 UTC
Is this still the case after updating your flatpak nightly?
Comment 2 Peter Sonntag 2017-05-09 05:37:40 UTC
Yes, unfortunately.
Comment 3 Christian Hergert 2017-05-09 06:38:55 UTC
Created attachment 351406 [details] [review]
flatpak: handle application addin not yet loaded

If our application addin has not yet loaded, we can't get access to
runtimes yet.
Comment 4 Christian Hergert 2017-05-09 06:40:42 UTC
Not sure why this was so reliably reproducible via shell, but this
is the crash I was seeing via `journalctl -xb`.

Attachment 351406 [details] pushed as 556c51b - flatpak: handle application addin not yet loaded