flatpak: handle application addin not yet loaded

If our application addin has not yet loaded, we can't get access to
runtimes yet.

https://bugzilla.gnome.org/show_bug.cgi?id=781960